# AuthDBServe

./: CMakeLists.txt  Data.cpp  Data.h  HttpServer.cpp  HttpServer.h  main.cpp  sql_create.cpp  sql_create.h
resources/: client.html  login.html  register.html
